tests/error/comprehension_errors/guarded3.err
Error: Drop violation (at $FILE:19:21)
   | 
17 | @guppy
18 | def foo(qs: list[MyStruct] @owned) -> list[qubit]:
19 |     return [s.q2 for s in qs if bar(s.q1)]
   |                      ^ Field `s.q2` with non-droppable type `qubit` may be leaked
   |                        ...
   | 
19 |     return [s.q2 for s in qs if bar(s.q1)]
   |                                 --------- if this expression is `False`

Guppy compilation failed due to 1 previous error
